--- a/package.json
+++ b/package.json
@@ -1,23 +1,86 @@
 {
   "name": "shopifystrategist",
   "version": "1.0.0",
-  "description": "",
+  "description": "ShopifyStrategist — Agency-grade PDP audit & battlecard generator (SSOT-driven)",
   "main": "index.js",
+  "type": "module",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "smoke": "node scripts/smoke.mjs"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "smoke": "node scripts/smoke.mjs",
+    "debug:keys": "tsx scripts/debug-keys.ts",
+    "test:keys": "tsx scripts/debug-keys.ts",
+    "test:db": "tsx scripts/test-prisma.ts",
+    "test:capture": "tsx scripts/test-capture.ts",
+    "test:playwright": "tsx scripts/test-playwright.ts",
+    "test:playwright:simple": "tsx scripts/test-playwright-simple.ts",
+    "test:shopify:light": "tsx scripts/test-shopify-light.ts",
+    "test:parallel": "tsx scripts/test-parallel.ts",
+    "test:storage": "tsx scripts/test-storage.ts",
+    "test:audit": "tsx scripts/test-audit.ts",
+    "test:facts": "tsx scripts/test-facts.ts",
+    "test:facts-integration": "tsx scripts/test-facts-integration.ts",
+    "test:ai-synthesizer": "tsx scripts/test-ai-synthesizer.ts",
+    "test:report-generator": "tsx scripts/test-report-generator.ts",
+    "test:pdf-generator": "tsx scripts/test-pdf-generator.ts",
+    "verify:real-pdp": "tsx scripts/verify-real-pdp.ts",
+    "benchmark:capture": "tsx scripts/benchmark-capture.ts",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "db:seed": "tsx prisma/seed.ts"
+  },
+  "dependencies": {
+    "@ai-sdk/openai": "^3.0.18",
+    "@prisma/client": "^5.9.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "ai": "^6.0.49",
+    "cheerio": "^1.2.0",
+    "dotenv": "^16.6.1",
+    "next": "^14.2.0",
+    "openai": "^6.16.0",
+    "playwright": "^1.40.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "zod": "^3.25.76"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "@vitest/ui": "^1.2.0",
+    "prisma": "^5.9.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.5.0",
+    "vitest": "^1.2.0"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nicolasdojcilovic-lab/shopifystrategist.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "shopify",
+    "audit",
+    "pdp",
+    "battlecard",
+    "conversion",
+    "teardown"
+  ],
+  "author": "Nicolas Dojcilovic",
   "license": "ISC",
-  "type": "module",
   "bugs": {
     "url": "https://github.com/nicolasdojcilovic-lab/shopifystrategist/issues"
   },
