WIP: additional refactors from Cursor

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Database (Supabase PostgreSQL)
+# Database (Supabase PostgreSQL). If connection fails, check Dashboard: project may be Paused.
 DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres"
 
 # Supabase
